// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of a TextField control 1`] = `
<Wrapper
  backgroundColor={null}
  border={null}
  borderColor={null}
  bottom={null}
  className="test-class"
  color={null}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  hidden={false}
  id={null}
  initialValue=""
  left={null}
  location="none"
  max="any"
  maxHeight={null}
  maxLength={null}
  maxWidth={null}
  min="any"
  minHeight={null}
  minLength={null}
  minWidth="1em"
  name="TextField"
  noborder={false}
  noedit={false}
  nohover={false}
  nopropagation={false}
  noripple={true}
  nospinner={false}
  notheme={false}
  notooltip={false}
  onBlur={[Function]}
  onChange={[Function]}
  onClear={[Function]}
  onError={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onValidation={[Function]}
  padding={null}
  reset={false}
  ripple={false}
  selected={false}
  size={null}
  sizing="normal"
  step="any"
  style={Object {}}
  testing={true}
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#c0c0c0",
      "buttonColor": "#666666",
      "chevronColor": "#cccccc",
      "color": "#000000",
      "fontFamily": "OpenSans, Georgia, serif",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "itemHoverColor": "#bedb39",
      "outlineColor": "#51cbee",
      "searchFocus": "#51cbee",
      "searchMatch": "#fd7400",
      "selectedBackgroundColor": "#1f8a70",
      "selectedForegroundColor": "#ffe11a",
      "titleBarBackgroundColor": "#004358",
      "titleBarForegroundColor": "#ffe11a",
      "tooltipBackgroundColor": "#708090",
      "tooltipForegroundColor": "#ffffff",
      "transitionDelay": "0.33s",
    }
  }
  tooltip={null}
  top={null}
  type="text"
  useclear={false}
  usevalidation={false}
  validators={Array []}
  visible={true}
  width={null}
  xcss={null}
>
  <TextField__TextfieldContainerView
    className="ui-textfield-container"
    id="TextField-0"
    minWidth="3rem"
    width={null}
  >
    <TextField__TextFieldView
      className="ui-textfield test-class"
      disabled={false}
      noborder={false}
      visible={true}
    >
      <TextField__StyledInput
        backgroundColor={null}
        border={null}
        borderColor={null}
        bottom={null}
        className="test-class"
        color={null}
        controlled={true}
        direction="right"
        disabled={false}
        err={null}
        errorMessage={null}
        focus={false}
        height={null}
        hidden={false}
        id={null}
        initialValue=""
        left={null}
        location="none"
        max="any"
        maxHeight={null}
        maxLength={null}
        maxWidth={null}
        min="any"
        minHeight={null}
        minLength={null}
        minWidth="1em"
        noborder={false}
        noedit={false}
        nohover={false}
        nopropagation={false}
        noripple={true}
        nospinner={false}
        notheme={false}
        notooltip={false}
        onBlur={[Function]}
        onChange={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        padding={null}
        ripple={false}
        selected={false}
        size={null}
        sizing="normal"
        step="any"
        style={Object {}}
        testing={true}
        theme={
          Object {
            "backgroundColor": "#ffffff",
            "borderColor": "#c0c0c0",
            "buttonColor": "#666666",
            "chevronColor": "#cccccc",
            "color": "#000000",
            "fontFamily": "OpenSans, Georgia, serif",
            "headerBackgroundColor": "#004358",
            "headerForegroundColor": "#ffffff",
            "headerHoverColor": "#ffe11a",
            "hoverColor": "#c0c0c0",
            "inputBorderColor": "#c0c0c0",
            "itemHoverColor": "#bedb39",
            "outlineColor": "#51cbee",
            "searchFocus": "#51cbee",
            "searchMatch": "#fd7400",
            "selectedBackgroundColor": "#1f8a70",
            "selectedForegroundColor": "#ffe11a",
            "titleBarBackgroundColor": "#004358",
            "titleBarForegroundColor": "#ffe11a",
            "tooltipBackgroundColor": "#708090",
            "tooltipForegroundColor": "#ffffff",
            "transitionDelay": "0.33s",
          }
        }
        tooltip={null}
        top={null}
        type="text"
        useclear={false}
        usevalidation={false}
        value=""
        visible={true}
        width={null}
        xcss={null}
      />
    </TextField__TextFieldView>
  </TextField__TextfieldContainerView>
</Wrapper>
`;

exports[`Test disabling of a TextField control 1`] = `
<TextField
  backgroundColor={null}
  border={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  controlled={true}
  direction="right"
  disabled={true}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  hidden={false}
  id={null}
  initialValue=""
  left={null}
  location="none"
  max="any"
  maxHeight={null}
  maxLength={null}
  maxWidth={null}
  min="any"
  minHeight={null}
  minLength={null}
  minWidth="1em"
  noborder={false}
  noedit={false}
  nohover={false}
  nopropagation={false}
  noripple={true}
  nospinner={false}
  notheme={false}
  notooltip={false}
  onBlur={[Function]}
  onChange={[Function]}
  onClear={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onValidation={[Function]}
  padding={null}
  ripple={false}
  selected={false}
  size={null}
  sizing="normal"
  step="any"
  style={Object {}}
  testing={true}
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#c0c0c0",
      "buttonColor": "#666666",
      "chevronColor": "#cccccc",
      "color": "#000000",
      "fontFamily": "OpenSans, Georgia, serif",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "itemHoverColor": "#bedb39",
      "outlineColor": "#51cbee",
      "searchFocus": "#51cbee",
      "searchMatch": "#fd7400",
      "selectedBackgroundColor": "#1f8a70",
      "selectedForegroundColor": "#ffe11a",
      "titleBarBackgroundColor": "#004358",
      "titleBarForegroundColor": "#ffe11a",
      "tooltipBackgroundColor": "#708090",
      "tooltipForegroundColor": "#ffffff",
      "transitionDelay": "0.33s",
    }
  }
  tooltip={null}
  top={null}
  type="text"
  useclear={false}
  usevalidation={false}
  validators={Array []}
  visible={true}
  width={null}
  xcss={null}
/>
`;
